k8s/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: e-test-nicehash-consumer
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: ClusterIP
  ports:
  - port: 4067
  selector:
    app: e-test-nicehash-consumer
